Fix settings imports

--- a/settings_minerva2gcal.py.example
+++ b/settings_minerva2gcal.py.example
@@ -1,2 +1,2 @@
 CAL_ID = ""
-MINVERA_CREDS = {"user": "my_username", "password": "hunter2"}
+MINERVA_CREDS = {"user": "my_username", "password": "hunter2"}
